roles/manifests/files/unifi.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ubiquiti
  labels:
    name: ubiquiti
