roles/manifests/files/traefik-config.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth-traefik
  namespace: kube-system
spec:
  basicAuth:
    secret: basicauth-traefik
    removeHeader: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`traefik.k8s.home.goodhouse.io`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: basicauth-traefik
      namespace: traefik
  tls:
    certResolver: letsencrypt
